45
================

07/07/21 Mandatory handling for Yes/No (Jacob Sabella) #1028
06/07/21 Separate permissions for import/export CSV #1024
06/07/21 Validate transport dates, pickup cannot be > dropoff #1025
03/07/21 Fix phone number formatting on embedded add person
30/06/21 Emblem to indicate animal has a future adoption #1021
29/06/21 Button to remove processed forms from incoming forms screen
26/06/21 Fix for resolving images in PDFs with later Python/HTMLParser
24/06/21 DateAvailableForAdoption wordkey and view/QB field #619
24/06/21 Rename trap loans to equipment loans #775
23/06/21 Querybuilder criteria for tests, extra emblems
22/06/21 Option to add pickup location/address to new animals #442
21/06/21 Strip vet info and owner name field from adoptable_js
21/06/21 Strip script tags properly before feeding to PDF converter
21/06/21 Generate monthly/annual figures when the report is requested #913
21/06/21 Add report toolbar with email/export to CSV/PDF #313
17/06/21 Fix for scaling images with alpha channel to JPG
16/06/21 Do not allow link fields to be removed from find screens #870
15/06/21 Show longer descriptions in calendar listview for tablets #976
15/06/21 ReturnedBy wordkeys #997
14/06/21 Export report: non-latin1 characters in headers break web.py
14/06/21 Use visual indicators for dialog required fields
11/06/21 Strip script tags from onlineform submissions #1004
11/06/21 When movement animal changes, update for animal #1008
11/06/21 Use native browser support for sticky table headers #908
10/06/21 Bug calculating the end of a report group for header counts
10/06/21 PetLink: support new submitDate column
10/06/21 Hide inactive lookups in smartphone interface
10/06/21 Do not include hidden raw markup fields in form submissions
10/06/21 Prevent duplicate fields in online form preview
09/06/21 Select all icon in tables now toggles #533
09/06/21 Fix datepicker focus issue on lost/found screens