@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Wed  7 Jul 09:46:01 BST 2021]"
-BUILD = "07070946"
+VERSION = "45u [Thu  8 Jul 09:22:48 BST 2021]"
+BUILD = "07080922"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
